# step-alb-poc

./: .gitignore
mod-lambda/: README.md  pyproject.toml
mod-lambda/src/: lambda_handler.py
mod-lambda/tests/: test_lambda_handler.py
service-lambda/: README.md  pyproject.toml
service-lambda/src/: lambda_handler.py
service-lambda/tests/: test_lambda_handler.py
streams-lambda/: README.md  pyproject.toml
streams-lambda/src/: lambda_handler.py
streams-lambda/tests/: test_lambda_handler.py
terraform/: README.md  backend.tf  data.tf  main.tf  outputs.tf  variables.tf
